<resources>
    <string name="the_winning_candidate_is">The Winning Candidate is:</string>
    <string name="seats_won">Seats Won:</string>
    <string name="vote_start_end">Vote(Start/End)</string>
    <string name="app_name">Matdaan</string>
    <string name="edited_text">Edited Text</string>
    <string name="candidate_1">Candidate 1</string>
    <string name="candidate_2">Candidate 2</string>
    <string name="candidate_3">Candidate 3</string>
    <string name="candidate_4">Candidate 4</string>
    <string name="candidate">Candidate</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="vote">Vote</string>
    <string name="admin">Admin</string>
    <string name="voters">Voters</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="vote_start_stop">Vote (Start/Stop)</string>
    <string name="candidate_information">Candidate Information</string>
    <string name="show_result">Show Result</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="description">Description</string>
    <string name="party_name">Party Name</string>
    <string name="description_of_the_string_candidate">Description of the @string/candidate</string>
    <string name="fetch">Fetch</string>
    <string name="button">Button</string>
    <string name="done">Done</string>
    <string name="admin_login">Admin Login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_your_otp_here">Enter your OTP here</string>
    <string name="sign_in">Sign In</string>
    <string name="otp">OTP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
</resources>
