<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard_Voter_Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/candidate" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/vote" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/result" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>