<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="22dp"
        android:text="@string/candidate_name"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:hint="@string/candidate_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints=""
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="23dp"
        android:text="@string/party_name"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/party_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="304dp"
        android:layout_height="58dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="19dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:text="Description" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/description_of_the_string_candidate"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button16"
        android:layout_width="420dp"
        android:layout_height="58dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="121dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        app:layout_constraintVertical_bias="0.313" />

</android.support.constraint.ConstraintLayout>