<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Candidate_Edit_Activity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="253dp"
        android:layout_height="53dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/candidate_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="253dp"
        android:layout_height="53dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/party_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:text="@string/candidate_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/party_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="505dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="252dp"
        android:layout_height="89dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="33dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />
</android.support.constraint.ConstraintLayout>